--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,13 @@ Flask-Migrate==4.1.0
 Flask-PyMongo==3.0.1
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.8
 MarkupSafe==3.0.2
 msgspec==0.19.0
+packaging==24.2
 pdfkit==1.0.0
 pillow==11.1.0
 pymongo==4.11.1
