--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.14.1
 bcrypt==4.2.1
 blinker==1.9.0
 cachelib==0.13.0
+chardet==5.2.0
 click==8.1.8
 dnspython==2.7.0
 Flask==3.1.0
@@ -22,6 +23,7 @@ pdfkit==1.0.0
 pillow==11.1.0
 pymongo==4.11.1
 python-dotenv==1.0.1
+reportlab==4.3.1
 SQLAlchemy==2.0.37
 typing_extensions==4.12.2
 Werkzeug==3.1.3
