--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,9 +3,10 @@ runtime: python311
 build:
   commands:
     pre-build:
-      - pip install --upgrade pip
+      - apt-get update
+      - apt-get install -y python3-pip
     build:
-      - pip install -r requirements.txt
+      - pip install --no-cache-dir -r requirements.txt
 run:
   command: gunicorn app:app --bind 0.0.0.0:8000 --workers 4
   network:
