--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,10 +3,13 @@ runtime: python311
 build:
   commands:
     pre-build:
-      - apt-get update
-      - apt-get install -y python3-pip
+      # ถ้า image เป็น Alpine-based ใช้ apk แทน apt-get
+      - apk update || true  # ถ้าไม่มี apk ให้ข้ามไป
+      - apk add --no-cache py3-pip || true  # ถ้าไม่มี apk ให้ข้ามไป
+      # ถ้า pip ยังไม่ติดตั้ง ลองดาวน์โหลดและติดตั้ง pip ด้วยวิธี manual
+      - if ! command -v pip3 &> /dev/null; then wget https://bootstrap.pypa.io/get-pip.py -O /tmp/get-pip.py && python3 /tmp/get-pip.py; fi
     build:
-      - pip install --no-cache-dir -r requirements.txt
+      - pip3 install --no-cache-dir -r requirements.txt
 run:
   command: gunicorn app:app --bind 0.0.0.0:8000 --workers 4
   network:
