--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -5,7 +5,7 @@ build:
   
     build:
       - pip3 install --no-cache-dir -r requirements.txt
-      - pip install --upgrade pip
+      - pip3 install --upgrade pip
 run:
   command: gunicorn app:app  
   network:
