--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,10 +1,10 @@
 version: 1.0
-runtime: python311
+runtime: python3
 build:
   commands:
   
     build:
-      - pip3 install --no-cache-dir -r requirements.txt
+      - pip3 install  -r requirements.txt
       - pip3 install --upgrade pip
 run:
   command: gunicorn app:app  
