--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -5,28 +5,30 @@ build:
   commands:
     pre-build:
       - echo "Installing dependencies..."
-    build:
       - pip install --upgrade pip
-      - pip install -r requirements.txt
+      - pip install --upgrade setuptools wheel
+    build:
+      - pip install -r requirements.txt --no-cache-dir
     post-build:
+      - echo "Verifying installation..."
+      - pip list
       - echo "Build completed"
 
 run:
-  runtime-version: 3.9
-  command: gunicorn app:app --bind=0.0.0.0:8000 --workers=2 --threads=4 --timeout=120
+  runtime-version: 3.11
+  command: gunicorn app:app --bind=0.0.0.0:8000 --workers=2 --threads=4 
   network:
     port: 8000
-    # env: HTTP
+    env: HTTP
   
   # ตัวอย่างการใช้ Environment Variables โดยตรง
-  # ถ้าต้องการใช้วิธีนี้ ให้ลบเครื่องหมาย # ด้านหน้าและกรอกค่าที่ต้องการ
-  # env:
-  #   - name: PYTHONUNBUFFERED
-  #     value: "1"
-  #   - name: FLASK_APP
-  #     value: "app.py"
-  #   - name: FLASK_ENV
-  #     value: "production"
+  env:
+    - name: PYTHONUNBUFFERED
+      value: "1"
+    - name: FLASK_APP
+      value: "app.py"
+    - name: FLASK_ENV
+      value: "production"
     # - name: DATABASE_URL
     #   value: "postgresql://username:password@your-db-host:5432/dbname"
     # - name: AWS_ACCESS_KEY_ID
