--- a/requirements.txt
+++ b/requirements.txt
@@ -33,5 +33,5 @@ s3transfer==0.11.3
 six==1.17.0
 SQLAlchemy==2.0.37
 typing_extensions==4.12.2
-urllib3==2.3.0
+urllib3>=1.25.4,<1.27
 Werkzeug==3.1.3
