--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -5,18 +5,18 @@ build:
   commands:
     pre-build:
       - echo "Installing dependencies..."
-      - pip install --upgrade pip
-      - pip install --upgrade setuptools wheel
+      - pip3 install --upgrade pip
+      - pip3 install --upgrade setuptools wheel
     build:
-      - pip install -r requirements.txt --no-cache-dir
+      - pip3 install -r requirements.txt --no-cache-dir
     post-build:
       - echo "Verifying installation..."
-      - pip list
+      - pip3 list
       - echo "Build completed"
 
 run:
-  runtime-version: 3.9
-  command: gunicorn app:app --bind=0.0.0.0:8000 --workers=2 --threads=4 --timeout=120
+
+  command: gunicorn app:app --bind=0.0.0.0:8000 --workers=2 --threads=4 
   network:
     port: 8000
     env: HTTP
