--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#ffffff",
     "icons": [
       {
-        "src": "/static/logo/logo_mtv.png",
+        "src": "/static/logo/mukhtari_icon_2d.png",
         "sizes": "512x512",
         "type": "image/png"
       }
