--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,24 +2,14 @@ server {
     listen 80;
     server_name mukhtati.ac.th www.mukhtati.ac.th;
 
+    # ตั้งค่า redirect ไปยัง HTTPS
     location / {
-        proxy_pass http://web:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        return 301 https://$host$request_uri;
     }
 
-    # สำหรับไฟล์ static
-    location /static/ {
-        alias /app/static/;
-        expires 30d;
-    }
-
-    # สำหรับไฟล์ uploads
-    location /uploads/ {
-        alias /app/uploads/;
-        expires 30d;
+    # ที่อยู่สำหรับ Let's Encrypt
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
 }
 
