--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name mukhtati.ac.th www.mukhtati.ac.th;
+    server_name mukhtari.ac.th www.mukhtari.ac.th;
 
     # ตั้งค่า redirect ไปยัง HTTPS
     location / {
@@ -16,10 +16,10 @@ server {
 # HTTPS configuration สำหรับใช้งานหลังจากติดตั้ง SSL
 server {
     listen 443 ssl;
-    server_name mukhtati.ac.th www.mukhtati.ac.th;
+    server_name mukhtari.ac.th www.mukhtari.ac.th;
 
-    ssl_certificate /etc/nginx/ssl/live/mukhtati.ac.th/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/mukhtati.ac.th/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/mukhtari.ac.th/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/mukhtari.ac.th/privkey.pem;
     
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
