--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,11 +78,10 @@ services:
   # Certbot สำหรับการจัดการ SSL certificates
   certbot:
     image: certbot/certbot:latest
-    container_name: mukhtari_certbot  # เปลี่ยนชื่อ container เพื่อหลีกเลี่ยงความขัดแย้ง
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/data:/var/www/certbot
-    command: certonly --webroot --webroot-path=/var/www/certbot --email admin@mukhtati.ac.th --agree-tos --no-eff-email --staging -d mukhtati.ac.th -d www.mukhtati.ac.th
+    command: certonly --webroot --webroot-path=/var/www/certbot --email fikree205m@gmail.com --agree-tos --no-eff-email --staging -d mukhtari.ac.th -d www.mukhtari.ac.th
 
 networks:
   app-network:
