--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,50 +1,102 @@
-server {
-    listen 80;
-    server_name mukhtari.ac.th www.mukhtari.ac.th;
-
-    # ตั้งค่า redirect ไปยัง HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
-
-    # ที่อยู่สำหรับ Let's Encrypt
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+worker_processes 1;  # ลดจำนวน worker processes เพื่อประหยัด CPU
+worker_rlimit_nofile 512;
+events {
+    worker_connections 256;  # ลดจำนวน connections ต่อ worker
+    multi_accept off;
 }
 
-# HTTPS configuration สำหรับใช้งานหลังจากติดตั้ง SSL
-server {
-    listen 443 ssl;
-    server_name mukhtari.ac.th www.mukhtari.ac.th;
-
-    ssl_certificate /etc/nginx/ssl/live/mukhtari.ac.th/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/mukhtari.ac.th/privkey.pem;
+http {
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    server_tokens off;
     
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_tickets off;
+    # การตั้งค่า buffer ให้เหมาะสมเพื่อลดการใช้หน่วยความจำ
+    client_body_buffer_size 10K;
+    client_header_buffer_size 1k;
+    client_max_body_size 8m;
+    large_client_header_buffers 2 1k;
+    
+    # การตั้งค่า caching เพื่อลดการใช้ CPU
+    open_file_cache max=1000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
+    
+    # เพิ่ม gzip เพื่อลด bandwidth
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    location / {
-        proxy_pass http://web:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    server {
+        listen 80;
+        server_name mukhtari.ac.th www.mukhtari.ac.th;
+
+        # ตั้งค่า redirect ไปยัง HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+
+        # ที่อยู่สำหรับ Let's Encrypt
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
     }
 
-    # สำหรับไฟล์ static
-    location /static/ {
-        alias /app/static/;
-        expires 30d;
-    }
+    # HTTPS configuration สำหรับใช้งานหลังจากติดตั้ง SSL
+    server {
+        listen 443 ssl;
+        server_name mukhtari.ac.th www.mukhtari.ac.th;
 
-    # สำหรับไฟล์ uploads
-    location /uploads/ {
-        alias /app/uploads/;
-        expires 30d;
+        ssl_certificate /etc/nginx/ssl/live/mukhtari.ac.th/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/live/mukhtari.ac.th/privkey.pem;
+        
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_tickets off;
+        
+        # ตั้งค่า SSL session caching เพื่อลดการใช้ CPU
+        ssl_session_cache shared:SSL:1m;
+
+        # ลดการรับส่งข้อมูลกับ backend เพื่อประหยัด CPU
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 8k;
+
+        location / {
+            proxy_pass http://web:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 90;
+            proxy_connect_timeout 90;
+        }
+
+        # สำหรับไฟล์ static
+        location /static/ {
+            alias /app/static/;
+            expires 30d;
+            access_log off;
+            add_header Cache-Control "public";
+        }
+
+        # สำหรับไฟล์ uploads
+        location /uploads/ {
+            alias /app/uploads/;
+            expires 30d;
+            access_log off;
+            add_header Cache-Control "public";
+        }
     }
 } 
