--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,14 +39,16 @@ http {
         listen 80;
         server_name mukhtari.ac.th www.mukhtari.ac.th;
 
-        # ตั้งค่า redirect ไปยัง HTTPS
-        location / {
-            return 301 https://$host$request_uri;
-        }
-
-        # ที่อยู่สำหรับ Let's Encrypt
+        # ที่อยู่สำหรับ Let's Encrypt - ต้องอยู่ก่อน redirect
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
+            allow all;
+            try_files $uri =404;
+        }
+
+        # ตั้งค่า redirect ไปยัง HTTPS เมื่อมีการเข้าถึงผ่าน HTTP
+        location / {
+            return 301 https://$host$request_uri;
         }
     }
 
@@ -72,6 +74,13 @@ http {
         proxy_buffering on;
         proxy_buffer_size 4k;
         proxy_buffers 8 8k;
+
+        # สำหรับ Let's Encrypt
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+            allow all;
+            try_files $uri =404;
+        }
 
         location / {
             proxy_pass http://web:8000;
